fixed font size on mobile

--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ header {
   grid-template-columns: repeat(1, 1fr);
   background-color: #fff;
   border-radius: 15px;
-  padding: 30px;
+  padding: 20px;
   h2 {
     color: var(--darkGrayCyan);
     font-size: 17px;
